--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -17,7 +17,7 @@
     <OldToolsVersion>3.5</OldToolsVersion>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>YellowstonePathology.Business.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>YellowstonePathology.Business.pfx</AssemblyOriginatorKeyFile>
     <ProjectGuid>{0712F3D4-5C03-4446-B8FE-B8F5BE9495B1}</ProjectGuid>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -2614,6 +2614,7 @@
     <EmbeddedResource Include="XmlSchema\LabEventLogSchema.xsd">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <None Include="YellowstonePathology.Business.pfx" />
     <None Include="YellowstonePathology.Business.snk" />
   </ItemGroup>
   <ItemGroup>
