Commit after removed ignored files

--- a/SqlXmlPersistence/SqlXmlPersistence.csproj
+++ b/SqlXmlPersistence/SqlXmlPersistence.csproj
@@ -36,7 +36,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>YellowstonePathology.SqlXmlPersistence.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>YellowstonPathology.SqlXmlPersistence.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Mongo|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -86,6 +86,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <None Include="YellowstonePathology.SqlXmlPersistence.pfx" />
+    <None Include="YellowstonPathology.SqlXmlPersistence.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
