--- a/BarcodeLib/BarcodeLib.csproj
+++ b/BarcodeLib/BarcodeLib.csproj
@@ -145,6 +145,7 @@
     <None Include="BarcodeXML.xss">
       <DependentUpon>BarcodeXML.xsd</DependentUpon>
     </None>
+    <None Include="YellowstonePathology.BarcodeLib.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
