--- a/YellowstonePathology.YpiConnect.Client/YellowstonePathology.YpiConnect.Client.csproj
+++ b/YellowstonePathology.YpiConnect.Client/YellowstonePathology.YpiConnect.Client.csproj
@@ -69,7 +69,7 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>680E6CF95B68EA31998BF0646A5E79E753C630F4</ManifestCertificateThumbprint>
