Rename classes already in separate folders

--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -1501,15 +1501,15 @@
     <Compile Include="Test\CalreticulinMutationAnalysis\CalreticulinMutationAnalysisTestOrder.cs" />
     <Compile Include="Test\CalreticulinMutationAnalysis\CalreticulinMutationAnalysisWordDocument.cs" />
     <Compile Include="Test\CCNDIBCLIGH\CCNDIBCLIGHAbnormalResult.cs" />
-    <Compile Include="Test\CCNDIBCLIGH\CCNDIBCLIGHReport.cs" />
+    <Compile Include="Test\CCNDIBCLIGH\CCNDIBCLIGHWordDocument.cs" />
     <Compile Include="Test\CCNDIBCLIGH\CCNDIBCLIGHResult.cs" />
-    <Compile Include="Test\CCNDIBCLIGH\EpicCCNDIBCLIGHObxView.cs" />
-    <Compile Include="Test\CCNDIBCLIGH\PanelSetOrderCCNDIBCLIGH.cs" />
+    <Compile Include="Test\CCNDIBCLIGH\CCNDIBCLIGHEpicObxView.cs" />
+    <Compile Include="Test\CCNDIBCLIGH\CCNDIBCLIGHTestOrder.cs" />
     <Compile Include="Test\CEBPA\CEBPANotDetectedResult.cs" />
-    <Compile Include="Test\CEBPA\CEBPAReport.cs" />
+    <Compile Include="Test\CEBPA\CEBPAWordDocument.cs" />
     <Compile Include="Test\CEBPA\CEBPAResult.cs" />
-    <Compile Include="Test\CEBPA\EpicCEBPAObxView.cs" />
-    <Compile Include="Test\CEBPA\PanelSetOrderCEBPA.cs" />
+    <Compile Include="Test\CEBPA\CEBPAEpicObxView.cs" />
+    <Compile Include="Test\CEBPA\CEBPATestOrder.cs" />
     <Compile Include="Test\ChromosomeAnalysisForFetalAnomaly\ChromosomeAnalysisForFetalAnomalyAbnormalResult.cs" />
     <Compile Include="Test\ChromosomeAnalysisForFetalAnomaly\ChromosomeAnalysisForFetalAnomalyEpicObxView.cs" />
     <Compile Include="Test\ChromosomeAnalysisForFetalAnomaly\ChromosomeAnalysisForFetalAnomalyNormalResult.cs" />
@@ -1596,11 +1596,11 @@
     <Compile Include="Test\FactorVLeiden\FactorVLeidenTestOrder.cs" />
     <Compile Include="Test\FactorVLeiden\FactorVLeidenWordDocument.cs" />
     <Compile Include="Test\FishAnalysisTestOrder.cs" />
-    <Compile Include="Test\FLT3\EpicFLT3ObxView.cs" />
+    <Compile Include="Test\FLT3\FLT3EpicObxView.cs" />
     <Compile Include="Test\FLT3\FLT3NotDetectedResult.cs" />
-    <Compile Include="Test\FLT3\FLT3Report.cs" />
+    <Compile Include="Test\FLT3\FLT3WordDocument.cs" />
     <Compile Include="Test\FLT3\FLT3Result.cs" />
-    <Compile Include="Test\FLT3\PanelSetOrderFLT3.cs" />
+    <Compile Include="Test\FLT3\FLT3TestOrder.cs" />
     <Compile Include="Test\HER2AmplificationByISH\HER2AmplificationByISHCMMCNteView.cs" />
     <Compile Include="Test\HER2AmplificationByISH\HER2AmplificationByISHEpicObxView.cs" />
     <Compile Include="Test\HER2AmplificationByISH\HER2AmplificationByISHGastricAdenocarcinomaResult.cs" />
@@ -1623,11 +1623,11 @@
     <Compile Include="Test\JAK2V617F\JAK2V617FResultCollection.cs" />
     <Compile Include="Test\JAK2V617F\JAK2V617FTestOrder.cs" />
     <Compile Include="Test\JAK2V617F\JAK2V617FWordDocument.cs" />
-    <Compile Include="Test\MDSByFish\EpicMDSByFishObxView.cs" />
+    <Compile Include="Test\MDSByFish\MDSByFishEpicObxView.cs" />
     <Compile Include="Test\MDSByFish\MDSByFishNormalResult.cs" />
-    <Compile Include="Test\MDSByFish\MDSByFishReport.cs" />
+    <Compile Include="Test\MDSByFish\MDSByFishWordDocument.cs" />
     <Compile Include="Test\MDSByFish\MDSByFishResult.cs" />
-    <Compile Include="Test\MDSByFish\PanelSetOrderMDSByFish.cs" />
+    <Compile Include="Test\MDSByFish\MDSByFishTestOrder.cs" />
     <Compile Include="Test\MicrosatelliteInstabilityAnalysis\MicrosatelliteInstabilityAnalysisDetectedResult.cs" />
     <Compile Include="Test\MicrosatelliteInstabilityAnalysis\MicrosatelliteInstabilityAnalysisEpicObxView.cs" />
     <Compile Include="Test\MicrosatelliteInstabilityAnalysis\MicrosatelliteInstabilityAnalysisNotDetectedResult.cs" />
