--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -378,6 +378,7 @@
     <Compile Include="Helper\PatientHelper.cs" />
     <Compile Include="Helper\SerializationHelper.cs" />
     <Compile Include="Helper\StringExtensionMethods.cs" />
+    <Compile Include="HL7View\Panther\PantherActionCode.cs" />
     <Compile Include="HL7View\Panther\PantherAssayHPV.cs" />
     <Compile Include="HL7View\Panther\PantherOrder.cs" />
     <Compile Include="HL7View\Panther\PantherAssay.cs" />
@@ -386,6 +387,7 @@
     <Compile Include="HL7View\Panther\PantherOBX.cs" />
     <Compile Include="HL7View\Panther\PantherOBR.cs" />
     <Compile Include="HL7View\Panther\PantherORC.cs" />
+    <Compile Include="HL7View\Panther\PantherOrderPriorityEnum.cs" />
     <Compile Include="HL7View\Panther\PantherPID.cs" />
     <Compile Include="HL7View\Panther\PantherHL7Client.cs" />
     <Compile Include="HL7View\Panther\PantherMSH.cs" />
