--- a/YellowstonePathology.YpiConnect.Service/YellowstonePathology.YpiConnect.Service.csproj
+++ b/YellowstonePathology.YpiConnect.Service/YellowstonePathology.YpiConnect.Service.csproj
@@ -36,7 +36,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>YellowstonePathology.Service.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>YellowstonePathology.YpiConnect.Service.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Mongo|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -117,6 +117,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <None Include="YellowstonePathology.Service.snk" />
+    <None Include="YellowstonePathology.YpiConnect.Service.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
