--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -360,6 +360,7 @@
     <Compile Include="Domain\DataLoadStatusEnum.cs" />
     <Compile Include="Domain\OrderLogCollection.cs" />
     <Compile Include="Domain\OrderLogItem.cs" />
+    <Compile Include="Facility.Model\LoweLawGroup.cs" />
     <Compile Include="Facility.Model\PathologyAssociatesOfIdahoFalls.cs" />
     <Compile Include="Flow\FlowCommentItem.Generated.cs">
       <SubType>Code</SubType>
