--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -246,6 +246,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CaseType.cs" />
+    <Compile Include="Client.Model\ClientSupply.cs" />
+    <Compile Include="Client.Model\ClientSupplyCollection.cs" />
+    <Compile Include="Client.Model\ClientSupplyOrder.cs" />
+    <Compile Include="Client.Model\ClientSupplyOrderDetail.cs" />
+    <Compile Include="Client.Model\ClientSupplyOrderDetailCollection.cs" />
     <Compile Include="ClientOrder.Model\ClientOrderDetailView.cs" />
     <Compile Include="Client\AllClientGroup.cs" />
     <Compile Include="Client\AthenaPhysicianClientDistribution.cs" />
