--- a/EdgeSampleLibrary/EdgeSampleLibrary/EdgeSampleLibrary.csproj
+++ b/EdgeSampleLibrary/EdgeSampleLibrary/EdgeSampleLibrary.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HPVNegativeResult.cs" />
+    <Compile Include="HPVPositiveResult.cs" />
+    <Compile Include="HPVResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample1.cs" />
   </ItemGroup>
